--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mantine/core": "4.0.6",
-    "@mantine/dates": "4.0.6",
-    "@mantine/hooks": "4.0.6",
-    "@mantine/next": "4.0.6",
-    "@mantine/notifications": "4.0.6",
-    "@mantine/prism": "4.0.6",
+    "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.8.4",
+    "@mantine/dates": "^5.8.4",
+    "@mantine/hooks": "^5.8.4",
+    "@mantine/next": "^5.8.4",
+    "@mantine/notifications": "^5.8.4",
+    "@mantine/prism": "^5.8.4",
     "cookies-next": "^2.0.4",
     "country-flag-icons": "^1.4.25",
     "dayjs": "^1.10.8",
